--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
     </header>
 
     <main id='main'>
-      <!-- Add our Pokemon -->
+        <h1 id="greeting"></h1>
+      <div id='decks'></div>
     </main>
 
     <script src="./src/script.js"></script>
