stopped header from jumping

--- a/index.html
+++ b/index.html
@@ -7,13 +7,13 @@
   </head>
   <body>
     <header>
-      <h2>Pokemon Teams!</h2>
     </header>
-
+    
     <main id='main'>
-        <h1 id="greeting"></h1>
+            <div><h1 id="greeting"></h1></div>
       <div id='decks'></div>
     </main>
+    <div id='cards'></div>
 
     <script src="./src/script.js"></script>
   </body>
