--- a/index.html
+++ b/index.html
@@ -7,8 +7,10 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
   </head>
   <body>
-    <header>
-    </header>
+      <!-- <input id="audio" type="file"></input> -->
+  <!-- <audio src="https://upload.wikimedia.org/wikipedia/en/6/61/Pok%C3%A9mon_Theme_Song_-_Sample.ogg" autoplay loop >
+      Your browser does not support the audio element.
+  </audio> -->
 
     <!-- Side navigation -->
 <div class="sidenav" hidden>
