trying to create deck

--- a/index.html
+++ b/index.html
@@ -47,6 +47,7 @@
     
     <main id='main' hidden>
             <div><h1 id="greeting" class="greeting"></h1></div>
+            <button id="create-button">CreateDeck</button>
             <div><h3 id="current-deck" class="greeting"></h3></div>
     </main>
     <div id='cards'></div>
