updated the input type for the password field to password

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
   <div id="login-logo-div"><img src="http://pluspng.com/img-png/pokemon-logo-png-file-pokemon-logo-png-500.png" id="login-logo">
     <form id="login-form">
         <span>USERNAME: <input type="text" name="username" id="username"></span><br>
-        <span>PASSWORD: <input type="text" name="lastname" id="password"></span><br>
+        <span>PASSWORD: <input type="password" name="password" id="password"></span><br>
         <input type="submit" value="Login" id="login-button">
       </form>
     </div>
