--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
     </div>
     
     <main id='main' hidden>
-            <div><h1 id="greeting" class="greeting"></h1></div>
+            <div id="banner"><h3 id="badge-banner">BADGES: <span id="my-badges"></span> </h3><span><h1 id="greeting" class="greeting"></h1></span></div>
             <button id="create-button">CreateDeck</button>
             <div><h3 id="current-deck" class="greeting"></h3></div>
     </main>
