added a please be patient function for when the user logs in

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
     <form id="login-form">
         <span>USERNAME: <input type="text" name="username" id="username"></span><br>
         <span>PASSWORD: <input type="password" name="password" id="password"></span><br>
-        <input type="submit" value="Login" id="login-button">
+        <input type="submit" value="Login" id="login-button" onclick="patient()">
       </form>
     </div>
     
